<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8sp"
            android:fontFamily="@font/myriad_pro_semi_bold"
            android:padding="6dp"
            android:text="@string/new_version"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/myriad_pro_semi_bold"
            android:paddingStart="6dp"
            android:text="@string/new_version_desc"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/update"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/black"
                android:fontFamily="@font/myriad_pro_regular"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/update"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>
</layout>