<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8sp"
            android:fontFamily="@font/myriad_pro_semi_bold"
            android:padding="6dp"
            android:text="@string/is_it_a_professional_call"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yes"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/black"
                android:fontFamily="@font/myriad_pro_regular"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/yes"
                android:textSize="16sp"
                app:cornerRadius="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="#CECECE"
                android:fontFamily="@font/myriad_pro_regular"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/no"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:cornerRadius="0dp" />
        </LinearLayout>

    </LinearLayout>

</layout>