<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#F5F5F5"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="8dp"
            app:elevation="0dp">

            <LinearLayout
                android:id="@+id/sitevisit_header_parent_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_9sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:text="@string/name_c"
                        android:textColor="#858585"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/site_visit_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:text="solitaire Lead 2"
                        android:layout_marginStart="4dp"
                        android:textColor="#1A1A1A"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/site_visit_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:gravity="center_vertical"
                        android:text="12 Min Ago"
                        android:textColor="#858585"
                        android:textSize="@dimen/_8sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:text="@string/project_c"
                        android:textColor="#858585"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/site_visit_projectName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:maxLines="2"
                        android:singleLine="false"
                        android:layout_marginStart="4dp"
                        android:text="@string/customer_facing_team_test_project"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:text="@string/sitevisit_type"
                        android:textColor="#858585"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/site_visit_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:maxLines="2"
                        android:singleLine="false"
                        android:layout_marginStart="4dp"
                        android:text="@string/customer_facing_team_test_project"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:text="@string/sitevisit_enquiry_type"
                        android:textColor="#858585"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/site_visit_enquiry_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:maxLines="2"
                        android:singleLine="false"
                        android:layout_marginStart="4dp"
                        android:text="@string/customer_facing_team_test_project"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:text="@string/sitevisit_sourcingManager"
                        android:textColor="#858585"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/site_visit_sourcingManager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:maxLines="2"
                        android:singleLine="false"
                        android:layout_marginStart="4dp"
                        android:text="@string/customer_facing_team_test_project"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="12dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/feedbackBtn"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/black"
                        android:elevation="0dp"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/feedback"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:cornerRadius="8dp"/>

                    <View
                        android:layout_width="16dp"
                        android:layout_height="5dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/viewDetailsBtn"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:elevation="0dp"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/viewdetails"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        app:cornerRadius="8dp"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".7dp"
                android:layout_gravity="bottom"
                android:background="#DEDEDE" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>