<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="#F5F5F5"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="12dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            android:layout_height="62dp">
            <LinearLayout
                android:id="@+id/ic_approval_menu_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="@dimen/def_margin_right"
                android:paddingTop="22dp"
                android:paddingBottom="20dp">

                <TextView
                    style="@style/MenuFragmentTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="1"
                    android:text="@string/new_booking_approval_req" />
                <TextView
                    android:id="@+id/new_booking_approval_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/black" />
                <View
                    android:layout_width="14dp"
                    android:layout_height="match_parent" />
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="16dp"
                    android:contentDescription="@string/image_desc"
                    android:src="@drawable/ic_menu_right"
                    app:tint="#858585" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="#F5F5F5"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="12dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            android:layout_height="62dp">
            <LinearLayout
                android:id="@+id/ic_approval_menu_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="@dimen/def_margin_right"
                android:paddingVertical="20dp">

                <TextView
                    style="@style/MenuFragmentTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/campaign_approval_req" />

                <TextView
                    android:id="@+id/campaign_approval_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/black" />
                <View
                    android:layout_width="14dp"
                    android:layout_height="match_parent" />
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="16dp"
                    android:contentDescription="@string/image_desc"
                    android:src="@drawable/ic_menu_right"
                    app:tint="#858585" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="#F5F5F5"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="12dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            android:layout_height="62dp">
            <LinearLayout
                android:id="@+id/ic_approval_menu_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="@dimen/def_margin_right"
                android:paddingVertical="20dp">
                ]

                <TextView
                    style="@style/MenuFragmentTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="1"
                    android:text="@string/source_change_approval_req" />

                <TextView
                    android:id="@+id/source_change_approval_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/black" />
                <View
                    android:layout_width="14dp"
                    android:layout_height="match_parent" />
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="16dp"
                    android:contentDescription="@string/image_desc"
                    android:src="@drawable/ic_menu_right"
                    app:tint="#858585" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="#F5F5F5"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="12dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            android:layout_height="62dp">
            <LinearLayout
                android:id="@+id/ic_approval_menu_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="@dimen/def_margin_right"
                android:paddingVertical="20dp">


                <TextView
                    style="@style/MenuFragmentTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/channel_partner_creation_approval_req" />

                <TextView
                    android:id="@+id/channel_partner_creation_approval_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/black" />
                <View
                    android:layout_width="14dp"
                    android:layout_height="match_parent" />
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="16dp"
                    android:contentDescription="@string/image_desc"
                    android:src="@drawable/ic_menu_right"
                    app:tint="#858585" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>