<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/stage_wise_opportunity_header_layout"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginVertical="4dp"
            android:background="#F1F1F1">

            <ImageButton
                android:id="@+id/thinBackBtn"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/background_color"
                android:contentDescription="@string/image_desc"
                android:scaleType="fitCenter"
                android:padding="10dp"
                android:onClick="onClick"
                android:src="@drawable/ic_thin_back" />

            <TextView
                android:id="@+id/title"
                style="@style/WiseOpportunityHeadingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/backBtnMargin"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/checkboxGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_6sdp"
                    android:paddingEnd="@dimen/def_margin_right">


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="24dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/whatsappBtn"
                        android:layout_width="0dp"
                        android:layout_height="38dp"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/black"
                        android:elevation="0dp"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/whatsapp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:cornerRadius="8dp"
                        app:icon="@drawable/ic_whatsapp"
                        app:iconGravity="textStart"
                        app:iconSize="20dp" />

                    <View
                        android:layout_width="16dp"
                        android:layout_height="5dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/emailBtn"
                        android:layout_width="0dp"
                        android:layout_height="38dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:elevation="0dp"
                        android:fontFamily="@font/myriad_pro_regular"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/email"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:cornerRadius="8dp"
                        app:icon="@drawable/ic_email"
                        app:iconGravity="textStart"
                        app:iconPadding="12dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>